--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,7 @@
 {
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#1D330F",
+        "titleBar.activeBackground": "#284815",
+        "titleBar.activeForeground": "#F8FCF5"
+    }
 }
