--- a/package.json
+++ b/package.json
@@ -1,22 +1,60 @@
 {
-  "name": "interview",
+  "name": "web-typescript",
   "version": "1.0.0",
-  "description": "",
+  "description": "TypeScript学习笔记",
   "main": "index.js",
   "author": "zhoubichaun@icloud.com",
-  "hommepage": "https://github.com/zhoubichuan/Web-Typescript/",
-  "private": true,
+  "hommepage": "https://github.com/zhoubichuan/web-typescript/",
+  "private": false,
   "license": "MIT",
   "scripts": {
     "dev": "vuepress dev src",
     "build": "vuepress build src",
-    "src:build": "vuepress build src",
-    "getname": "node utils/getFilenames.js",
+    "publish": "gulp && cd lib && npm publish",
+    "build:comps": "gulp",
     "deploy": "bash deploy.sh",
-    "gh-pages": "bash deploy_gh-pages.sh"
+    "github": "bash github.sh",
+    "gitee": "bash gitee.sh",
+    "dll": "webpack -p --progress --config ./src/.vuepress/webpack.dll.conf.js",
+    "build:js": "node rollup.js",
+    "build:css": "npx gulp sass",
+    "build:all": "npm run build:js && npm run build:css"
   },
   "devDependencies": {
-    "vuepress": "^0.14.4"
+    "@vuepress/plugin-active-header-links": "1.8.2",
+    "@vuepress/plugin-back-to-top": "1.8.2",
+    "@vuepress/plugin-blog": "1.9.4",
+    "@vuepress/plugin-medium-zoom": "1.8.2",
+    "@vuepress/plugin-nprogress": "1.8.2",
+    "@vuepress/plugin-pwa": "1.8.2",
+    "async-validator": "1.11.5",
+    "body-parser": "1.20.2",
+    "clean-webpack-plugin": "4.0.0",
+    "less": "3.0.2",
+    "less-loader": "4.1.0",
+    "node-sass": "4.14.1",
+    "sass": "^1.69.5",
+    "sass-loader": "7.3.1",
+    "voice-core": "^0.4.0",
+    "vuepress-plugin-boxx": "0.0.7",
+    "vuepress-plugin-dynamic-title": "1.0.0",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@ckeditor/ckeditor5-build-decoupled-document": "^39.0.1",
+    "@ckeditor/ckeditor5-vue2": "^3.0.1",
+    "axios": "0.21.1",
+    "element-ui": "2.3.7",
+    "i18n": "0.15.1",
+    "jspdf": "^2.5.1",
+    "lodash": "4.17.21",
+    "moment": "2.29.4",
+    "qs": "6.11.2",
+    "vue-pdf": "4.2.0",
+    "vue3-sfc-loader": "^0.8.4",
+    "vuepress": "1.9.7",
+    "vuex": "3.1.0",
+    "web-elementui": "1.1.6"
+  }
 }
